--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,16 @@ th {
   color: white;
 }
 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield; /* Firefox */
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
